# Anno1602-network-analysis-and-reverse-engineering

./: .gitignore  .gitmodules  2023-04-26 lobby connect pyproxy.pcapng  LICENSE  README.md  check_out.md  ip_addr_host_client.txt  known structure and events.md  known structure and events.txt  notes.md  setup_client_network.sh  shell_inside_client_netns.sh  shell_inside_host_netns.sh  wineTest.js
1602ProxyPython/: config.py  main.py  parser.py
AI-Brainstorming/: 2025-06-30 Claude-Anno 1602 Network Reverse Engineering.json  2025-06-30 Claude-Anno 1602 Network Reverse Engineering.md
NodeProxy/: README.md  package-lock.json  package.json  pnpm-lock.yaml
NodeProxy/src/: DPlayProxy.ts  PacketParser.ts  PipeProxy.ts  app.ts  sketches.ts
NodeProxy/src/PacketTypes/: DPlay.d.ts  index.d.ts
docker/: .gitignore
game-folder/: .gitignore  README.md  game.sh  pol-run.sh  setup.sh  winecfg.sh  winetricks.sh
graveyard/: server.ts
net-resrever/: docker-compose.yml  package.json
net-resrever/video-to-ws/: bun.lockb  package.json  pnpm-lock.yaml  server.ts
net-resrever/video-to-ws/static/: index.html
net-resrever/web-server/: logger.ts  package.json  pnpm-lock.yaml  server.ts
net-resrever/web-ui/: package.json  pnpm-lock.yaml
net-resrever/web-ui/src/: App.tsx  index.css
rust_proxy/: Cargo.toml  README.md  package.json
rust_proxy/proxy_commons/: Cargo.toml
rust_proxy/proxy_commons/src/: lib.rs  shared_logger.rs
rust_proxy/src/: main.rs  tcp_proxy.rs  udp_proxy.rs
rust_proxy/x642/: Cargo.toml
rust_proxy/x642/src/: lib.rs
