[workspace]
resolver = "2"
members = ["x642", "proxy_commons"]

[package]
name = "rust_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
bytes = "1.5"
color-eyre = "0.6"
directplay-rs = { version = "*", path = "./crates/directplay-rs" }
futures = { version = "0.3", features = ["thread-pool"] }
hot-lib-reloader = "^0.6"
http = "^0.2"
httparse = "1.8"
httpdate = "1.0"
once_cell = "1.18"
proxy_commons = { version = "*", path = "./proxy_commons" }
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
x642 ={ version = "*", path = "./x642" }
